--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=github-repo-listing
+
+github.api.url=https://api.github.com
+github.api.users.repositories=/users/{username}/repos
+github.api.repos.branches=/repos/{owner}/{repo}/branches
